fix broken layout

--- a/css/style.css
+++ b/css/style.css
@@ -3072,3 +3072,9 @@ ul.sub-menu .sub-menu {
     line-height: 20px;
     font-weight: bold;
 }
+.content.sub {
+    overflow: hidden;
+}
+.fb_iframe_widget iframe {
+    position: relative!important;
+}
